aggiunta auotmazione per runnare backend e frontend + correzzione dati del backend di ogni classe + nginx server